[gd_scene load_steps=22 format=1]

[ext_resource path="res://Assets/Scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilesets/platforms.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/_Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scripts/CameraFocus.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scripts/Enemies/Enemies.gd" type="Script" id=5]
[ext_resource path="res://Assets/_Scenes/Enemies/Jumper.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/_Scenes/Enemies/Floater.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/_Scenes/Enemies/Bot.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/_Scenes/Traps/Lava.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/_Scenes/Traps/Bomb.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/_Scenes/Traps/Mine.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/_Scenes/Checkpoint.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/_Scenes/Exit.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Sprites/Menu/resume.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Menu/quit.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sounds/menu_back.smp" type="Sample" id=16]
[ext_resource path="res://Assets/Sounds/menu_select.smp" type="Sample" id=17]
[ext_resource path="res://Assets/Sounds/menu_move.smp" type="Sample" id=18]

[sub_resource type="Animation" id=1]

resource/name = "flash"
length = 0.2
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1, 0.11, 0.12, 0.13, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.2 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "idle"
length = 0.01
loop = false
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SampleLibrary" id=3]

samples/menu_back = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 16 )
}
samples/menu_move = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 17 )
}
samples/menu_select = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 18 )
}

[node name="Level1" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="Game" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Game"]

process/pause_mode = 1
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 48, 48 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -1703968, 3, -1769463, 1, -1638432, 3, -1703927, 1, -1572896, 3, -1638391, 1, -1507360, 3, -1572855, 1, -1441824, 3, -1507319, 1, -1376288, 3, -1441783, 1, -1310752, 3, -1376247, 1, -1245216, 3, -1310711, 1, -1179680, 3, -1245175, 1, -1114144, 3, -1179639, 1, -1048608, 3, -1114103, 1, -983072, 3, -1048567, 1, -917536, 3, -983031, 1, -852000, 3, -917495, 1, -786464, 3, -851959, 1, -721005, 3, -720984, 1, -720979, 1, -720940, 1, -720928, 3, -786423, 1, -655469, 3, -655448, 1, -655443, 1, -655404, 1, -655392, 3, -720887, 1, -589933, 3, -589912, 1, -589907, 1, -589868, 1, -589856, 3, -655351, 1, -524397, 3, -524376, 1, -524371, 1, -524332, 1, -524320, 3, -589815, 1, -458861, 3, -458840, 1, -458835, 1, -458796, 1, -458784, 3, -524279, 1, -393325, 3, -393304, 1, -393299, 1, -393260, 1, -393248, 3, -458743, 1, -327789, 3, -327768, 1, -327763, 1, -327724, 1, -327712, 3, -393207, 1, -262253, 3, -262232, 1, -262227, 1, -262188, 1, -262176, 3, -327671, 1, -196717, 3, -196696, 1, -196691, 1, -196652, 1, -196640, 3, -262135, 1, -131181, 3, -131160, 1, -131155, 1, -131116, 1, -131104, 3, -196599, 1, -65645, 3, -65624, 1, -65619, 1, -65580, 1, -65568, 3, -131067, 2, -131066, 2, -131065, 2, -131064, 2, -131063, 8, -109, 3, -88, 1, -83, 1, -44, 1, -32, 3, -65531, 3, 65427, 3, 65448, 1, 65453, 1, 65492, 1, 65504, 3, 5, 3, 130963, 3, 130984, 1, 130989, 1, 131028, 1, 131040, 3, 131063, 2, 131064, 2, 131065, 2, 131066, 2, 131067, 2, 131068, 2, 131069, 2, 131070, 2, 131071, 2, 65536, 2, 65537, 2, 65538, 2, 65539, 2, 65540, 2, 65541, 3, 196499, 3, 196520, 1, 196525, 1, 196564, 1, 196576, 0, 196577, 14, 196578, 0, 196579, 0, 196580, 0, 196581, 0, 196582, 0, 196583, 0, 196584, 0, 196585, 0, 196586, 4, 196590, 13, 196595, 13, 196599, 3, 262035, 3, 262056, 1, 262061, 1, 262100, 1, 262113, 14, 262122, 1, 262135, 3, 327571, 3, 327592, 1, 327597, 1, 327636, 1, 327649, 14, 327658, 1, 327671, 3, 393107, 3, 393128, 1, 393133, 1, 393172, 1, 393185, 14, 393194, 1, 393207, 3, 458643, 3, 458664, 1, 458669, 1, 458708, 1, 458721, 14, 458730, 1, 458731, 2, 458732, 2, 458733, 2, 458734, 2, 458735, 2, 458736, 2, 458737, 2, 458738, 2, 458739, 2, 458740, 2, 458741, 2, 458742, 2, 458743, 3, 524179, 3, 524200, 1, 524205, 1, 524244, 1, 524257, 14, 589715, 3, 589736, 1, 589741, 1, 589780, 1, 589793, 14, 655251, 3, 655272, 1, 655277, 1, 655293, 1, 655294, 0, 655295, 0, 655296, 4, 655316, 1, 655329, 14, 720787, 3, 720808, 1, 720813, 1, 720829, 1, 720830, 2, 720831, 2, 720832, 8, 720836, 11, 720837, 6, 720838, 12, 720852, 1, 720865, 14, 786323, 3, 786344, 1, 786349, 1, 786388, 1, 786401, 14, 851859, 3, 851880, 1, 851885, 1, 851888, 5, 851889, 0, 851890, 0, 851891, 0, 851892, 0, 851893, 0, 851894, 0, 851895, 0, 851896, 0, 851897, 0, 851898, 0, 851899, 3, 851924, 1, 851937, 14, 917395, 3, 917416, 1, 917421, 1, 917424, 3, 917435, 3, 917460, 1, 917473, 14, 982931, 3, 982952, 1, 982957, 1, 982960, 3, 982971, 0, 982972, 0, 982973, 0, 982974, 0, 982975, 0, 982976, 0, 982977, 0, 982978, 0, 982979, 0, 982980, 0, 982981, 0, 982982, 0, 982983, 0, 982984, 0, 982985, 0, 982986, 0, 982987, 0, 982988, 3, 982996, 1, 982997, 2, 982998, 2, 982999, 2, 983000, 2, 983001, 2, 983002, 2, 983003, 2, 983004, 2, 983005, 2, 983006, 2, 983007, 2, 983008, 2, 983009, 14, 1048467, 3, 1048488, 1, 1048493, 1, 1048496, 3, 1048524, 3, 1048545, 1, 1114003, 3, 1114024, 1, 1114029, 1, 1114032, 3, 1114060, 3, 1114081, 1, 1179539, 3, 1179560, 1, 1179565, 1, 1179568, 3, 1179596, 3, 1179599, 11, 1179600, 6, 1179601, 12, 1179617, 1, 1245075, 3, 1245096, 1, 1245101, 1, 1245104, 3, 1245132, 3, 1245153, 1, 1310611, 3, 1310632, 1, 1310637, 1, 1310640, 3, 1310668, 3, 1310689, 1, 1376147, 3, 1376168, 1, 1376173, 1, 1376176, 3, 1376204, 0, 1376205, 0, 1376206, 3, 1376210, 1, 1376211, 0, 1376212, 0, 1376213, 0, 1376214, 0, 1376215, 0, 1376216, 0, 1376217, 3, 1376225, 1, 1441683, 3, 1441704, 1, 1441709, 1, 1441712, 3, 1441742, 9, 1441743, 2, 1441744, 2, 1441745, 2, 1441746, 8, 1441753, 0, 1441754, 4, 1441761, 1, 1507219, 3, 1507240, 1, 1507245, 1, 1507248, 3, 1507290, 1, 1507291, 2, 1507292, 2, 1507293, 2, 1507294, 2, 1507295, 2, 1507296, 2, 1507297, 8, 1572755, 3, 1572776, 1, 1572781, 1, 1572784, 0, 1572785, 0, 1572786, 0, 1572787, 0, 1572788, 0, 1572789, 0, 1572790, 0, 1572791, 0, 1572792, 0, 1572793, 0, 1572794, 4, 1638291, 3, 1638312, 1, 1638317, 1, 1638330, 1, 1703827, 3, 1703848, 1, 1703853, 1, 1703854, 2, 1703855, 2, 1703856, 2, 1703857, 2, 1703858, 2, 1703859, 2, 1703860, 2, 1703861, 2, 1703862, 2, 1703863, 2, 1703866, 1, 1769363, 3, 1769384, 1, 1769399, 1, 1769402, 1, 1834899, 3, 1834920, 1, 1834935, 1, 1834938, 1, 1900435, 3, 1900456, 1, 1900457, 2, 1900458, 2, 1900459, 2, 1900460, 2, 1900461, 2, 1900462, 2, 1900463, 2, 1900464, 2, 1900465, 2, 1900466, 2, 1900467, 2, 1900468, 2, 1900469, 2, 1900470, 2, 1900471, 8, 1900474, 1, 1965971, 3, 1965986, 13, 1966010, 1, 2031507, 3, 2031546, 1, 2097043, 3, 2097054, 13, 2097062, 13, 2097082, 1, 2162579, 3, 2162618, 1, 2228115, 3, 2228120, 1, 2228121, 0, 2228122, 0, 2228123, 4, 2228130, 7, 2228136, 1, 2228137, 0, 2228138, 0, 2228139, 0, 2228140, 3, 2228143, 5, 2228144, 0, 2228145, 4, 2228149, 5, 2228150, 0, 2228151, 0, 2228152, 0, 2228153, 0, 2228154, 0, 2293651, 3, 2293656, 1, 2293659, 1, 2293672, 1, 2293676, 3, 2293679, 3, 2293681, 1, 2293685, 3, 2359187, 3, 2359192, 1, 2359195, 1, 2359196, 2, 2359197, 2, 2359198, 2, 2359199, 2, 2359200, 2, 2359201, 2, 2359202, 2, 2359203, 2, 2359204, 2, 2359205, 2, 2359206, 2, 2359207, 2, 2359208, 8, 2359212, 9, 2359213, 2, 2359214, 2, 2359215, 3, 2359217, 1, 2359218, 2, 2359219, 2, 2359220, 2, 2359221, 3, 2424723, 3, 2424728, 1, 2490259, 3, 2490264, 1, 2555795, 3, 2555800, 1, 2621331, 9, 2621332, 2, 2621335, 2, 2621336, 8, 2686868, 1, 2686871, 3, 2752404, 1, 2752407, 3, 2817940, 1, 2817941, 2, 2817942, 2, 2817943, 3 )

[node name="Players" type="Node2D" parent="Game"]

process/pause_mode = 1

[node name="Player1" parent="Game/Players" instance=ExtResource( 3 )]

transform/pos = Vector2( 364, -260 )

[node name="CameraFocus" type="Node2D" parent="Game/Players"]

process/pause_mode = 2
script/script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="Game/Players/CameraFocus"]

transform/pos = Vector2( 364, -260 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 10, 10 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = true
smoothing/speed = 6.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="Enemies" type="Node2D" parent="Game"]

process/pause_mode = 1
script/script = ExtResource( 5 )

[node name="Jumper1" parent="Game/Enemies" instance=ExtResource( 6 )]

transform/pos = Vector2( -176, 76 )

[node name="Jumper2" parent="Game/Enemies" instance=ExtResource( 6 )]

transform/pos = Vector2( -35, 76 )

[node name="Jumper3" parent="Game/Enemies" instance=ExtResource( 6 )]

transform/pos = Vector2( -313, 76 )

[node name="Jumper4" parent="Game/Enemies" instance=ExtResource( 6 )]

transform/pos = Vector2( -2468, 944 )

[node name="Jumper5" parent="Game/Enemies" instance=ExtResource( 6 )]

transform/pos = Vector2( -2268, 1036 )

[node name="Jumper6" parent="Game/Enemies" instance=ExtResource( 6 )]

transform/pos = Vector2( -3599, 1228 )

[node name="Jumper7" parent="Game/Enemies" instance=ExtResource( 6 )]

transform/pos = Vector2( -3475, 1228 )

[node name="Floater1" parent="Game/Enemies" instance=ExtResource( 7 )]

transform/pos = Vector2( -712, -135 )

[node name="Floater2" parent="Game/Enemies" instance=ExtResource( 7 )]

transform/pos = Vector2( -712, -135 )
leftFirst = true

[node name="Floater3" parent="Game/Enemies" instance=ExtResource( 7 )]

transform/pos = Vector2( -3546, 297 )
leftFirst = false

[node name="Floater4" parent="Game/Enemies" instance=ExtResource( 7 )]

transform/pos = Vector2( -4623, 1200 )
leftFirst = false

[node name="Bot1" parent="Game/Enemies" instance=ExtResource( 8 )]

transform/pos = Vector2( -1508, 72 )
stationary = true

[node name="Bot2" parent="Game/Enemies" instance=ExtResource( 8 )]

transform/pos = Vector2( -1829, 984 )
stationary = false

[node name="Bot3" parent="Game/Enemies" instance=ExtResource( 8 )]

transform/pos = Vector2( -1924, 936 )
stationary = false

[node name="Bot4" parent="Game/Enemies" instance=ExtResource( 8 )]

transform/pos = Vector2( -2277, 792 )
stationary = true

[node name="Bot5" parent="Game/Enemies" instance=ExtResource( 8 )]

transform/pos = Vector2( -3124, 408 )
stationary = true

[node name="Bot6" parent="Game/Enemies" instance=ExtResource( 8 )]

transform/pos = Vector2( -2823, 456 )
stationary = true

[node name="Bot7" parent="Game/Enemies" instance=ExtResource( 8 )]

transform/pos = Vector2( -2944, 648 )
stationary = false

[node name="Bot8" parent="Game/Enemies" instance=ExtResource( 8 )]

transform/pos = Vector2( -3194, 648 )
stationary = false

[node name="Bot9" parent="Game/Enemies" instance=ExtResource( 8 )]

transform/pos = Vector2( -4678, 1464 )
stationary = true

[node name="Bot10" parent="Game/Enemies" instance=ExtResource( 8 )]

transform/pos = Vector2( -4487, 1368 )
stationary = true

[node name="Bot11" parent="Game/Enemies" instance=ExtResource( 8 )]

transform/pos = Vector2( -4963, 1892 )
stationary = true

[node name="Bot12" parent="Game/Enemies" instance=ExtResource( 8 )]

transform/pos = Vector2( -5204, 1892 )
stationary = true

[node name="Traps" type="Node2D" parent="Game"]

process/pause_mode = 1

[node name="Lava1" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -456, 308 )

[node name="Lava4 3" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -504, 308 )

[node name="Lava44" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -552, 308 )

[node name="Lava45 2" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -600, 308 )

[node name="Lava453" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -648, 308 )

[node name="Lava454" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -696, 308 )

[node name="Lava455" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -744, 308 )

[node name="Lava456" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -792, 308 )

[node name="Lava457" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -840, 308 )

[node name="Lava458" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -888, 308 )

[node name="Lava459" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -936, 308 )

[node name="Lava460" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -984, 308 )

[node name="Lava2" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -456, 260 )

[node name="Lava4 2" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -504, 260 )

[node name="Lava43" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -552, 260 )

[node name="Lava45" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -600, 260 )

[node name="Lava46" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -648, 260 )

[node name="Lava47" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -696, 260 )

[node name="Lava48" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -744, 260 )

[node name="Lava49" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -792, 260 )

[node name="Lava50" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -840, 260 )

[node name="Lava51" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -888, 260 )

[node name="Lava52" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -936, 260 )

[node name="Lava53" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -984, 260 )

[node name="Lava3" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -456, 212 )

[node name="Lava4" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -504, 212 )

[node name="Lava5" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -552, 212 )

[node name="Lava6" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -600, 212 )

[node name="Lava7" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -648, 212 )

[node name="Lava8" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -696, 212 )

[node name="Lava9" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -744, 212 )

[node name="Lava10" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -792, 212 )

[node name="Lava11" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -840, 212 )

[node name="Lava12" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -888, 212 )

[node name="Lava13" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -936, 212 )

[node name="Lava14" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -984, 212 )

[node name="Lava15" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -3624, 1700 )

[node name="Lava22" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4204, 1700 )

[node name="Lava23" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4348, 1700 )

[node name="Lava24" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4492, 1700 )

[node name="Lava25" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4636, 1700 )

[node name="Lava21" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -3912, 1701 )

[node name="Lava16" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -3672, 1700 )

[node name="Lava22 5" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4252, 1700 )

[node name="Lava226" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4396, 1700 )

[node name="Lava228 2" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4540, 1700 )

[node name="Lava2283" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4684, 1700 )

[node name="Lava21 5" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -3960, 1701 )

[node name="Lava17" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -3720, 1700 )

[node name="Lava22 2" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4300, 1700 )

[node name="Lava223" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4444, 1700 )

[node name="Lava228 3" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4588, 1700 )

[node name="Lava2284" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4732, 1700 )

[node name="Lava21 2" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4004, 1701 )

[node name="Lava18" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -3720, 1652 )

[node name="Lava22 3" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4300, 1652 )

[node name="Lava224" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4444, 1652 )

[node name="Lava228 5" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4588, 1652 )

[node name="Lava2286" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4732, 1652 )

[node name="Lava21 3" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4004, 1653 )

[node name="Lava19" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -3672, 1652 )

[node name="Lava22 4" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4252, 1652 )

[node name="Lava225" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4396, 1652 )

[node name="Lava228 4" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4540, 1652 )

[node name="Lava2285" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4684, 1652 )

[node name="Lava21 4" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -3960, 1653 )

[node name="Lava20" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -3624, 1652 )

[node name="Lava22 6" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4204, 1652 )

[node name="Lava227" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4348, 1652 )

[node name="Lava228" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4492, 1652 )

[node name="Lava229" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4636, 1652 )

[node name="Lava230" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4776, 1652 )

[node name="Lava231" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -4776, 1700 )

[node name="Lava21 6" parent="Game/Traps" instance=ExtResource( 9 )]

transform/pos = Vector2( -3912, 1653 )

[node name="Bomb1" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -2227, 870 )

[node name="Bomb2" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -2331, 870 )

[node name="Bomb3" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -2298, 870 )

[node name="Bomb4" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -2262, 870 )

[node name="Bomb5" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -3803, 1114 )

[node name="Bomb11 5" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -3948, 1398 )

[node name="Bomb6" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -3747, 1114 )

[node name="Bomb11 6" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -3892, 1398 )

[node name="Bomb7" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -3691, 1114 )

[node name="Bomb11 3" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -3836, 1398 )

[node name="Bomb8" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -3634, 1114 )

[node name="Bomb11 2" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -3779, 1398 )

[node name="Bomb9" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -3572, 1114 )

[node name="Bomb11" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -3717, 1398 )

[node name="Bomb10" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -3513, 1114 )

[node name="Bomb11 4" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -3658, 1398 )

[node name="Bomb115" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -3600, 1398 )

[node name="Bomb116" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -4011, 1398 )

[node name="Bomb117" parent="Game/Traps" instance=ExtResource( 10 )]

transform/pos = Vector2( -4488, 1446 )

[node name="Mine1" parent="Game/Traps" instance=ExtResource( 11 )]

transform/pos = Vector2( -2235, 812 )

[node name="Mine2" parent="Game/Traps" instance=ExtResource( 11 )]

transform/pos = Vector2( -2322, 812 )

[node name="Mine3" parent="Game/Traps" instance=ExtResource( 11 )]

transform/pos = Vector2( -3412, 572 )

[node name="Mine4" parent="Game/Traps" instance=ExtResource( 11 )]

transform/pos = Vector2( -3507, 572 )

[node name="Mine5" parent="Game/Traps" instance=ExtResource( 11 )]

transform/pos = Vector2( -3596, 572 )

[node name="Mine6" parent="Game/Traps" instance=ExtResource( 11 )]

transform/pos = Vector2( -3686, 572 )

[node name="Mine7" parent="Game/Traps" instance=ExtResource( 11 )]

transform/pos = Vector2( -4877, 1580 )

[node name="Checkpoints" type="Node2D" parent="Game"]

process/pause_mode = 1

[node name="Checkpoint1" parent="Game/Checkpoints" instance=ExtResource( 12 )]

transform/pos = Vector2( -1535, 1076 )

[node name="Checkpoint2" parent="Game/Checkpoints" instance=ExtResource( 12 )]

transform/pos = Vector2( -3397, 1560 )

[node name="Exits" type="Node2D" parent="Game"]

process/pause_mode = 1

[node name="Exit" parent="Game/Exits" instance=ExtResource( 13 )]

transform/pos = Vector2( -5112, 2036 )

[node name="Exit1" parent="Game/Exits" instance=ExtResource( 13 )]

transform/pos = Vector2( -5064, 2036 )

[node name="Exit2" parent="Game/Exits" instance=ExtResource( 13 )]

transform/pos = Vector2( -5112, 1988 )

[node name="Exit3" parent="Game/Exits" instance=ExtResource( 13 )]

transform/pos = Vector2( -5064, 1988 )

[node name="PauseMenu" type="Node2D" parent="."]

visibility/visible = false

[node name="Resume" type="TextureFrame" parent="PauseMenu"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -228.0
margin/top = 357.0
margin/right = -443.0
margin/bottom = 308.0
texture = ExtResource( 14 )
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseMenu/Resume"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flash = SubResource( 1 )
anims/idle = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Quit" type="TextureFrame" parent="PauseMenu"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -266.0
margin/top = 275.0
margin/right = -406.0
margin/bottom = 220.0
texture = ExtResource( 15 )
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseMenu/Quit"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flash = SubResource( 1 )
anims/idle = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 6
config/samples = SubResource( 3 )
default/volume_db = -12.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


